# django_google_oauth_rest

./: README.md  README.rst  setup.cfg
