[metadata]
name = google-auth
version = 1.0
author = Ahmad Mohammadi
author_email = mohammadi.ahmad00@gmail.com
description = "Django Google auth"
long_description = file:README.md
license = MIT
keywords = django google auth oauth
classifier = 
    Environment :: Web Environment
    Framework :: Django
    Inteded Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_packaging_date = true
packages = find:
python_requires = >=3
install_required =
    Django
    PyJWT
    requests